# groccing-the-coding-interview

./: .editorconfig  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  add_problem.sh
grocc/: test_case_generator.h
grocc/two_sum/: two_sum.c  two_sum_test_cases.h
groccc/: CMakeLists.txt  allocators.c  allocators.h  hash_helpers.c  hash_helpers.h  loggers.h  run_problems.c  test_case_generator.h
groccc/daily_temperatures/: daily_temperatures.c  daily_temperatures_test_cases.h  daily_temperatures_tests.h
groccc/group_anagrams/: group_anagrams.c  group_anagrams_test_cases.h  group_anagrams_tests.h
groccc/largest_rectangle_in_histogram/: largest_rectangle_in_histogram.c
groccc/longest_consecutive_sequence/: longest_consecutive_sequence.c  longest_consecutive_sequence_tests.h
groccc/top_k_frequent_elements/: top_k_frequent_elements.c  top_k_frequent_elements_tests.h
groccc/trapping_rainwater/: trapping_rainwater.c  trapping_rainwater_test_cases.h  trapping_rainwater_tests.h
groccc/two_sum/: two_sum.c  two_sum_test_cases.h  two_sum_tests.h
groccc/valid_sudoku/: valid_sudoku.c  valid_sudoku_tests.h
tools/: scanners.cmake
utility/: hash_helpers.h
